fixed line height when text wrapped

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body {
 
 h1.main-title {
   font-size: 3.2em;
+  line-height: 1;
 }
 #app > h1.main-title {
   /* compensate for <top-header> height */
